# wasm-wanderings

./: README.md
components/cache-example/: README.md  cache.wit  create-rust-lib.sh  install-wit-bindgen.sh
components/cache-example/cpp-consumer/: .gitignore  Makefile  build.sh  main.cpp
components/cache-example/rust-consumer/: Cargo.toml  build.sh  inspect-imports.sh
components/cache-example/rust-consumer/src/: main.rs
components/cache-example/rust-wasi-impl/: Cargo.toml  bindings.rs  build.sh  generate-bidings.sh  inspect-exports.sh
components/cache-example/rust-wasi-impl/src/: lib.rs
